--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@ https://opensource.org/licenses/mit-license.php
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="UTF-8" />
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css" />
 <title>VR site</title>
- <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
+ <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
   <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
@@ -49,7 +48,7 @@ gltfアニメ再生用-->
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
   <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
-  <video id="video" src="./warp.mp4" ></video>
+  <video id="video" src="./warp.mp4" autoplay loop="true" playsinline webkit-playsinline muted></video>
 </a-assets>
 
 
