--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@ https://opensource.org/licenses/mit-license.php
 <head>
 <meta charset="UTF-8" />
 <meta name="apple-mobile-web-app-capable" content="yes"/>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css" />
 <title>VR site</title>
  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
@@ -42,13 +41,13 @@ gltfアニメ再生用-->
 </script>
 
 <body class="a-body">
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;" artoolkit>
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
   <!--embedded arjs="sourceType: webcam;"-->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
   <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
-  <video id="video" src="./warp.mp4" autoplay loop="true" playsinline webkit-playsinline muted></video>
+  <video id="video" crossOrigin="anonymous" src="./warp.mp4"　autoplay muted playsinline webkit-playsinline loop></video>
 </a-assets>
 
 
