--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ gltfアニメ再生用-->
 </script>
 
 <body class="a-body">
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" arjs="debugUIEnabled:false;">
   <!--embedded arjs="sourceType: webcam;"-->
 
 <a-assets>
