--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ https://opensource.org/licenses/mit-license.php
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <link rel="stylesheet" href="style.css" />
 <title>VR site</title>
- <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+ <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
   <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
@@ -41,13 +41,13 @@ gltfアニメ再生用-->
 </script>
 
 <body class="a-body">
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" arjs="debugUIEnabled:false;">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
   <!--embedded arjs="sourceType: webcam;"-->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
   <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
-  <video id="video" crossOrigin="anonymous" autoplay="true" playsinline loop="true" src="./warp.mp4"></video>
+  <video id="video" crossOrigin="anonymous" autoplay="false" playsinline loop="true" src="warp.mp4"></video>
 </a-assets>
 
 
@@ -103,7 +103,7 @@ gltfアニメ再生用-->
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="0.7 0.01 0.5" scale="0.4 0.4 0.4" value="Selena Gomez" color="white" rotation="-90 0 0"></a-text>
 <a-box src="#img"  width="0.8" height="0.8" depth="0.03" position="1 0 0" rotation="-90 0 0"></a-box>
-<a-video src="#video" width="0.8" height="0.8" position="1 0 1" rotation="-90 0 0"></a-video>
+<a-video src="#video" width="0.8" height="0.8" position="1 1 0" rotation="-90 0 0"></a-video>
 </a-marker>
 
 
