--- a/index.html
+++ b/index.html
@@ -48,14 +48,6 @@ gltfアニメ再生用-->
         }
     });
 
-                AFRAME.registerComponent('play-listener', {
-        init: function () {
-            this.el.addEventListener('touchstart', function (evt) {
-              //↓超重要!
-                this.setAttribute('src', "warp.mp4");
-            });
-        }
-    });
 </script>
 
 <body class="a-body">
@@ -65,7 +57,8 @@ gltfアニメ再生用-->
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
   <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
-  <video id="vid" crossOrigin="anonymous" muted autoplay="false" playsinline webkit-playsinline loop="true" src="warp.mp4"></video>
+  <video id="vid" src="warp.mp4"></video>
+  <!--crossOrigin="anonymous" muted autoplay="true" playsinline webkit-playsinline loop="true"-->
 </a-assets>
 
 
@@ -121,7 +114,7 @@ gltfアニメ再生用-->
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="0.7 0.01 0.5" scale="0.4 0.4 0.4" value="Selena Gomez" color="white" rotation="-90 0 0"></a-text>
 <a-box src="#img"  width="0.8" height="0.8" depth="0.03" position="1 0 0" rotation="-90 0 0"></a-box>
-<a-video src="#vid" width="1.6" height="0.9" position="1 0 1" rotation="-90 0 0" play-listener></a-video>
+<a-plane src="#vid" material="src:#vid" width="1.6" height="0.9" position="1 0 1" rotation="-90 0 0" play-listener></a-plane>
 </a-marker>
 
 
