--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ https://opensource.org/licenses/mit-license.php
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <link rel="stylesheet" href="style.css" />
 <title>VR site</title>
- <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+ <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
   <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
@@ -50,12 +50,13 @@ gltfアニメ再生用-->
     });
 */
 
-    AFRAME.registerComponent('play-listener', {
-        init: function ()
+    AFRAME.registerComponent('play-listener',
     {
-          let vid = document.querySelector("#vid");
-          vid.pause();
-          this.el.addEventListener('click',function()
+        init: function ()
+     {
+      let vid = document.querySelector("#vid");
+      vid.pause();
+      this.el.addEventListener('mouseenter',function()
       {
       vid.play();
       });
