--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ gltfアニメ再生用-->
   <a-entity cursor="rayOrigin: mouse;fuse: false"
             position="0 0 -1"
             geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
-            scale="1 1 1"
-            material="color: black; shader: flat">
+            scale="0.2 0.2 0.2"
+            material="color: white; shader: flat">
         <!--a-animation 
              begin="mouseenter" 
              easing="ease-out" 
@@ -129,11 +129,11 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.02 0.02 0.02" position="2 0 0.5" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
+<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.02 0.02 0.02" position="1.55 0 -0.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
-<a-text position="0.7 0.01 0.5" scale="0.4 0.4 0.4" value="Selena Gomez" color="white" rotation="-90 0 0"></a-text>
-<a-box src="#img"  width="0.8" height="0.8" depth="0.03" position="1 0 0" rotation="-90 0 0"></a-box>
-<a-plane material="src:#vid" width="1.6" height="0.9" position="1 0 1" rotation="-90 0 0" play-listener></a-plane>
+<a-text position="0.6 0.05 -0.15" scale="0.4 0.4 0.4" value="Selena Gomez" color="white" rotation="-90 0 0"></a-text>
+<a-box src="#img"  width="0.7" height="0.7" depth="0.03" position="0.9 0 -0.5" rotation="-90 0 0"></a-box>
+<a-plane material="src:#vid" width="1.2" height="0.72" position="1.15 0 0.3" rotation="-90 0 0" play-listener></a-plane>
 </a-marker>
 
 
