--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.02 0.02 0.02" position="1.55 0 -0.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
+<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.02 0.02 0.02" position="0 0 -0.5" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
-<a-text position="0.6 0.05 -0.15" scale="0.4 0.4 0.4" value="Selena Gomez" color="white" rotation="-90 0 0"></a-text>
-<a-box src="#img"  width="0.7" height="0.7" depth="0.03" position="0.9 0 -0.5" rotation="-90 0 0"></a-box>
-<a-plane material="src:#vid" width="1.2" height="0.72" position="1.15 0 0.3" rotation="-90 0 0" play-listener></a-plane>
+<a-text position="-0.25 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
+<a-box src="#img"  width="0.7" height="0.7" depth="0.03" position="0 0 0.9" rotation="-90 0 0"></a-box>
+<a-plane material="src:#vid" width="3.2" height="1.8" position="2.2 0 0.4" rotation="-90 0 0" play-listener></a-plane>
 </a-marker>
 
 
