--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ https://opensource.org/licenses/mit-license.php
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <link rel="stylesheet" href="style.css" />
 <title>VR site</title>
- <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
+ <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
   <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
@@ -28,6 +28,112 @@ gltfアニメ再生用-->
 <!--script src="./js/aframe-ar.min.js"></script-->
 </head>
 
+<body class="a-body">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
+  <!--embedded arjs="sourceType: webcam;"-->
+
+<a-assets>
+  <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
+  <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
+  <video id="vid" src="warp.mp4" crossOrigin="anonymous" muted autoplay="true" playsinline webkit-playsinline loop="true"></video>
+</a-assets>
+
+
+<a-entity camera look-controls>
+  <a-entity cursor="rayOrigin: mouse;fuse: false"
+            position="0 0 -1"
+            geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
+            scale="0.2 0.2 0.2"
+            material="color: white; shader: flat">
+        <a-animation 
+             begin="mouseenter" 
+             easing="ease-out" 
+             attribute="scale" 
+             fill="forwards" 
+             from="2 2 2" 
+             to="1 1 1" 
+             dur="300">
+      </a-animation>
+      <!--a-animation 
+             begin="mouseenter"
+             attribute="color" 
+             fill="forwards" 
+             from="black" 
+             to="red" 
+             dur="0">
+      </a-animation>
+      <a-animation 
+             begin="mouseleave" 
+             easing="ease-in" 
+             attribute="scale" 
+             fill="forwards" 
+             from="1 1 1" 
+             to="2 2 2" 
+             dur="300">
+      </a-animation>
+      <a-animation 
+             begin="mouseleave" 
+             attribute="color" 
+             fill="forwards" 
+             from="red" 
+             to="black" 
+             dur="0">
+      </a-animation-->
+</a-entity>
+</a-entity>
+<!--fuse="true" fuse-timeout="3000" -->
+
+
+<!-- マーカーを登録（hololo testマーカー） -->
+<a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
+
+<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener>
+
+</a-entity>
+<!--link="href:https://www.google.co.jp"-->
+<a-text position="-0.25 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
+<a-box src="#img"  width="0.7" height="0.7" depth="0.03" position="0 0 0.9" rotation="-90 0 0">
+
+</a-box>
+<a-plane material="src:#vid" width="3.2" height="1.8" position="2.2 0 0.4" rotation="-90 0 0" play-listener></a-plane>
+</a-marker>
+
+
+
+<!-- directional light shining from the top left.-->
+<!-- a-light color="white" position="-1 1 0" intensity="3" ></a-light-->
+
+<!-- point light, 5 meters in the air.-->
+<!--a-light type="point" color="white" position="0 5 0" intensity="3"></a-light-->
+
+<!-- Dim ambient lighting. -->
+<!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
+
+
+  <!--
+<a-box id="target1" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+<a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+
+
+  animationしたい場合は対象オブジェクト内に以下のように記述。
+    a-animation attribute="rotation" from="0 0 0" to="0 360 0" repeat="indefinite" easing="linear"></a-animation>
+
+  注視点でインタラクティブ性持たせる際は以下をa-camera内に記述。
+  <a-camera position="0 1.8 4">
+  <a-cursor visible="true" scale="2" color="#4CC3D9" offset="2" maxdistance="100" opacity="0.5"></a-cursor>
+  </a-camera>
+
+  <a-cube id="target1" color="#666" position="-1 0 0" rotation="0 0 0">
+    <a-mouseenter color="#066"></a-mouseenter>
+  </a-cube>
+
+  <a-cube id="target2" color="#666" position="1 0 0">
+  </a-cube>
+ -->
+
+</a-scene>
 <script>
     AFRAME.registerComponent('cursor-listener', {
         init: function () {
@@ -69,109 +175,5 @@ gltfアニメ再生用-->
 
 
 </script>
-
-<body class="a-body">
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
-  <!--embedded arjs="sourceType: webcam;"-->
-
-<a-assets>
-  <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
-  <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
-  <video id="vid" src="warp.mp4" crossOrigin="anonymous" muted autoplay="true" playsinline webkit-playsinline loop="true"></video>
-</a-assets>
-
-
-<a-entity camera look-controls>
-  <a-entity cursor="rayOrigin: mouse;fuse: false"
-            position="0 0 -1"
-            geometry="primitive: ring;radiusInner: 0.02; radiusOuter: 0.03"
-            scale="0.2 0.2 0.2"
-            material="color: white; shader: flat">
-        <!--a-animation 
-             begin="mouseenter" 
-             easing="ease-out" 
-             attribute="scale" 
-             fill="forwards" 
-             from="2 2 2" 
-             to="1 1 1" 
-             dur="300">
-      </a-animation>
-      <a-animation 
-             begin="mouseenter"
-             attribute="color" 
-             fill="forwards" 
-             from="black" 
-             to="red" 
-             dur="0">
-      </a-animation>
-      <a-animation 
-             begin="mouseleave" 
-             easing="ease-in" 
-             attribute="scale" 
-             fill="forwards" 
-             from="1 1 1" 
-             to="2 2 2" 
-             dur="300">
-      </a-animation>
-      <a-animation 
-             begin="mouseleave" 
-             attribute="color" 
-             fill="forwards" 
-             from="red" 
-             to="black" 
-             dur="0">
-      </a-animation-->
-</a-entity>
-</a-entity>
-<!--fuse="true" fuse-timeout="3000" -->
-
-
-<!-- マーカーを登録（hololo testマーカー） -->
-<a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
-
-<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
-<!--link="href:https://www.google.co.jp"-->
-<a-text position="-0.25 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
-<a-box src="#img"  width="0.7" height="0.7" depth="0.03" position="0 0 0.9" rotation="-90 0 0"></a-box>
-<a-plane material="src:#vid" width="3.2" height="1.8" position="2.2 0 0.4" rotation="-90 0 0" play-listener></a-plane>
-</a-marker>
-
-
-
-<!-- directional light shining from the top left.-->
-<!-- a-light color="white" position="-1 1 0" intensity="3" ></a-light-->
-
-<!-- point light, 5 meters in the air.-->
-<!--a-light type="point" color="white" position="0 5 0" intensity="3"></a-light-->
-
-<!-- Dim ambient lighting. -->
-<!--a-light type="ambient" color="#white" intensity="3" light=""></a-light-->
-
-
-  <!--
-<a-box id="target1" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-<a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-
-
-  animationしたい場合は対象オブジェクト内に以下のように記述。
-    a-animation attribute="rotation" from="0 0 0" to="0 360 0" repeat="indefinite" easing="linear"></a-animation>
-
-  注視点でインタラクティブ性持たせる際は以下をa-camera内に記述。
-  <a-camera position="0 1.8 4">
-  <a-cursor visible="true" scale="2" color="#4CC3D9" offset="2" maxdistance="100" opacity="0.5"></a-cursor>
-  </a-camera>
-
-  <a-cube id="target1" color="#666" position="-1 0 0" rotation="0 0 0">
-    <a-mouseenter color="#066"></a-mouseenter>
-  </a-cube>
-
-  <a-cube id="target2" color="#666" position="1 0 0">
-  </a-cube>
- -->
-
-</a-scene>
-
 </body>
 </html>
