--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@ gltfアニメ再生用-->
 <!-- マーカーを登録（hololo testマーカー） -->
 <a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
 
-<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener>
-
-</a-entity>
+<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="-0.25 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
 <a-box src="#img"  width="0.7" height="0.7" depth="0.03" position="0 0 0.9" rotation="-90 0 0">
