--- a/index.html
+++ b/index.html
@@ -28,6 +28,48 @@ gltfアニメ再生用-->
 <!--script src="./js/aframe-ar.min.js"></script-->
 </head>
 
+<script>
+    AFRAME.registerComponent('cursor-listener', {
+        init: function () {
+            this.el.addEventListener('click', function (evt) {
+              //↓超重要!
+                this.setAttribute('href', 'https://www.google.co.jp');
+                //console.log('I was clicked at: ', evt.detail.intersection.point);
+            });
+        }
+    });
+
+/*
+        AFRAME.registerComponent('play-listener', {
+        init: function () {
+            this.el.addEventListener('click', function (evt) {
+              //↓超重要!
+                this.setAttribute('src', "warp.mp4");
+            });
+        }
+    });
+*/
+
+    AFRAME.registerComponent('play-listener',
+    {
+        init: function ()
+     {
+      let vid = document.querySelector("#vid");
+      vid.pause();
+      this.el.addEventListener('mouseenter',function()
+      {
+      vid.play();
+      });
+      this.el.addEventListener('mouseleave',function()
+      {
+      vid.pause();
+      });
+    }
+    });
+
+
+</script>
+
 <body class="a-body">
  <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
   <!--embedded arjs="sourceType: webcam;"-->
@@ -91,7 +133,7 @@ gltfアニメ再生用-->
 <!--link="href:https://www.google.co.jp"-->
 <a-text position="-0.25 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
 <a-box src="#img"  width="0.7" height="0.7" depth="0.03" position="0 0 0.9" rotation="-90 0 0">
-
+<a-animation attribute="rotation" begin="click" dur="500" fill="backwards" to="30 30 360"></a-animation>
 </a-box>
 <a-plane material="src:#vid" width="3.2" height="1.8" position="2.2 0 0.4" rotation="-90 0 0" play-listener></a-plane>
 </a-marker>
@@ -132,46 +174,6 @@ gltfアニメ再生用-->
  -->
 
 </a-scene>
-<script>
-    AFRAME.registerComponent('cursor-listener', {
-        init: function () {
-            this.el.addEventListener('click', function (evt) {
-              //↓超重要!
-                this.setAttribute('href', 'https://www.google.co.jp');
-                //console.log('I was clicked at: ', evt.detail.intersection.point);
-            });
-        }
-    });
 
-/*
-        AFRAME.registerComponent('play-listener', {
-        init: function () {
-            this.el.addEventListener('click', function (evt) {
-              //↓超重要!
-                this.setAttribute('src', "warp.mp4");
-            });
-        }
-    });
-*/
-
-    AFRAME.registerComponent('play-listener',
-    {
-        init: function ()
-     {
-      let vid = document.querySelector("#vid");
-      vid.pause();
-      this.el.addEventListener('mouseenter',function()
-      {
-      vid.play();
-      });
-      this.el.addEventListener('mouseleave',function()
-      {
-      vid.pause();
-      });
-    }
-    });
-
-
-</script>
 </body>
 </html>
