--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ https://opensource.org/licenses/mit-license.php
 <link rel="stylesheet" href="style.css" />
 <title>VR site</title>
  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
   <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
   <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
 <!--script src="./js/aframe-v0.8.2.min.js"></script-->
@@ -66,6 +66,23 @@ gltfアニメ再生用-->
       });
     }
     });
+
+
+        AFRAME.registerComponent('registerevents', {
+        init: function () {
+            var marker = this.el;
+
+            // マーカーを検出したイベントの登録
+            marker.addEventListener('markerFound', function () {
+                var markerId = marker.id;
+                console.log('markerFound', markerId);
+
+                // アニメーションの開始
+                document.querySelector("#box").setAttribute('animation', 'property: scale; from:1 0 0 ;to: 1 1 1; loop: false; dur: 1000;easing: easeInOutSine');
+                document.querySelector("#text").setAttribute('animation', 'property: scale; from:1 0 0 ;to: 0.4 0.4 0.4; loop: false; dur: 1000;easing: easeInOutSine');
+                document.querySelector("#plane").setAttribute('animation', 'property: scale; from:0 0 1 ;to: 1 1 1; loop: false; dur: 1000;easing: easeInOutSine');
+                document.querySelector("#cg").setAttribute('animation','property: scale; from:0 0 0 ;to: 0.03 0.03 0.03; loop: false; dur: 1000;easing: easeInOutSine');
+            });}})
 
 
 </script>
@@ -127,13 +144,14 @@ gltfアニメ再生用-->
 
 
 <!-- マーカーを登録（hololo testマーカー） -->
-<a-marker preset='custom' type='pattern' url="./pattern-marker.patt">
+<a-marker preset='custom' type='pattern' url="./pattern-marker.patt" registerevents>
 
-<a-entity gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
+<a-entity id="cg" gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
-<a-text position="-0.25 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
-<a-box src="#img"  width="0.7" height="0.7" depth="0.03" position="0 0 0.9" rotation="-90 0 0"></a-box>
-<a-plane material="src:#vid" width="3.2" height="1.8" position="2.2 0 0.4" rotation="-90 0 0" play-listener></a-plane>
+<a-text id="text" position="-0.3 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
+<a-box id="box" src="#img"  width="0.7" height="0.7" depth="0.03" position="0 0 0.9" rotation="-90 0 0">
+</a-box>
+<a-plane id="plane" material="src:#vid" width="3.2" height="1.8" position="2.2 0 0.4" rotation="-90 0 0" play-listener></a-plane>
 </a-marker>
 
 
