--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ gltfアニメ再生用-->
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
   <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
-  <video id="vid" src="warp.mp4" crossOrigin="anonymous" muted autoplay="true" playsinline webkit-playsinline loop="true"></video>
+  <video id="vid" src="warp1.m4v" crossOrigin="anonymous" muted autoplay="true" playsinline webkit-playsinline loop="true"></video>
 </a-assets>
 
 
