--- a/indexのコピー.html
+++ b/indexのコピー.html
@@ -17,9 +17,8 @@ https://opensource.org/licenses/mit-license.php
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <link rel="stylesheet" href="style.css" />
 <title>VR site</title>
- <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
+ <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
-  <!--script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script-->
   <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
   <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
 <!--script src="./js/aframe-v0.8.2.min.js"></script-->
@@ -88,7 +87,7 @@ gltfアニメ再生用-->
 
 </script>
 
-<body class="a-body" body style='margin: 0; overflow: hidden;'>
+<body class="a-body">
  <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
   <!--embedded arjs="sourceType: webcam;"-->
 
