--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ https://opensource.org/licenses/mit-license.php
 <link rel="stylesheet" href="style.css" />
 <title>VR site</title>
  <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
+  <!--script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script-->
+  <script src=https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   <!--script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script-->
   <!-- glTFに含まれたアニメーションを再生するためにaframe-extrasをロード -->
   <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
@@ -89,7 +90,7 @@ gltfアニメ再生用-->
 </script>
 
 <body class="a-body" body style='margin: 0; overflow: hidden;'>
- <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
+ <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" class="fullscreen" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false" arjs="patternRatio=0.80">
   <!--embedded arjs="sourceType: webcam;"-->
 
 <a-assets>
@@ -145,7 +146,7 @@ gltfアニメ再生用-->
 
 
 <!-- マーカーを登録（hololo testマーカー） -->
-<a-marker preset='custom' type='pattern' url="./pattern-marker.patt" registerevents>
+<a-marker preset='custom' type='pattern' url="./pattern-face.patt" registerevents>
 
 <a-entity id="cg" gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
