--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ gltfアニメ再生用-->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
-  <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
+  <a href="tel:09084644360"><img id="img" crossOrigin="anonymous" src="./face.jpg"></img></a>
   <video id="vid" src="warp1.m4v" crossOrigin="anonymous" muted autoplay="true" playsinline webkit-playsinline loop="true"></video>
 </a-assets>
 
