--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ gltfアニメ再生用-->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
-  <a href="tel:09084644360"><img id="img" crossOrigin="anonymous" src="./face.jpg"></img></a>
+  <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
   <video id="vid" src="warp1.m4v" crossOrigin="anonymous" muted autoplay="true" playsinline webkit-playsinline loop="true"></video>
 </a-assets>
 
@@ -164,7 +164,7 @@ gltfアニメ再生用-->
 <a-entity id="cg" gltf-model="#model" class="link-object" data-link="https://www.google.co.jp" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 <a-text id="text" position="-0.3 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
-<a-box id="box" src="#img"  width="0.7" height="0.7" depth="0.03" position="0 0 0.9" rotation="-90 0 0" tel-listener>
+<a-box href="tel:09084644360" id="box" src="#img"  width="0.7" height="0.7" depth="0.03" position="0 0 0.9" rotation="-90 0 0" tel-listener>
 </a-box>
 <a-plane id="plane" material="src:#vid" width="3.2" height="1.8" position="2.2 0 0.4" rotation="-90 0 0" play-listener></a-plane>
 </a-marker>
