--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ gltfアニメ再生用-->
         init: function () {
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
-                this.setAttribute('href', 'tel:09084644360');
+                this.setAttribute('href', 'https://www.yahoo.co.jp');
                 //console.log('I was clicked at: ', evt.detail.intersection.point);
             });
         }
